fix: input and textarea color in dark mode(#master)

--- a/components/input/input/input.module.scss
+++ b/components/input/input/input.module.scss
@@ -54,7 +54,9 @@
         width: 100%;
         outline-style: none;
         border: none;
+        color: var(--color);
         background: transparent;
+        transition: color var(--transition-time);
         &::placeholder {
           color: var(--secondary);
           transition: color var(--transition-time);
